fix : 调整代码